# talk-blockchain-rs

./: README.md  outline.txt  script-1-head-hash.js  script-3-loop.js  script-4-POW.js  script-5-date.js  script.js
blockchain-git/: outline.txt  script-2-amend.js  script-3-loop.js
blockchain-rs/: Cargo.toml  README.md
blockchain-rs/.garden/heads/: my-garden
blockchain-rs/examples/: proof_work.rs
blockchain-rs/src/: block_chain.rs  garden.rs  lib.rs
