[package]
name = "blockchain"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4"
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"
ring = "0.16"
rayon = { version = "1.5", optional = true }
uuid = {version = "0.8", features = ["serde", "v4"]}
num_cpus = { version = "1.13" }
bincode = "1.3"

[features]
parallelize = ["rayon"]
